P12/P5: MoPat dep bail recovered via Nexus GitLab proxy; 17->21 re-bailed on c3p0/DB-infra wall under JDK 21